# temporal-rocq

./: .Makefile.d  .gitignore  Initial.v  LICENSE  Makefile  Makefile.conf  README.md  _CoqProject  build.sh  coq-proj.opam
.github/workflows/: build_rocq.yml
src/: Sec4Def.v  Sec4Thm.v  Sec5Def.v  Sec7Def.v  Sec7Thm.v  Sec9Def.v
src/Section3/: CompareISODate.v  CreateISODateRecord.v  IsValidISODate.v
src/Section4/: AddTime.v  BalanceTime.v  Sec4Thm.v  TimeRecord.v
src/Section5/: CombineISODateAndTimeRecord.v
src/Section7/: MaxTimeDuration.v
theories/: Basic.v  Grammar.v  RFC3339.v  Sec11Def.v  Sec11Thm.v  Sec12Def.v  Sec12Thm.v  Sec13Def.v  Sec13Thm.v  Sec3Def.v  Sec3Thm.v  Sec4Def.v  Sec4Thm.v  Sec5Def.v  Sec7Def.v  Sec7Thm.v  Sec8Def.v  Sec9Def.v  StringUtil.v
theories/Section11/: FormatOffsetTimeZoneIdentifier.v  FormatUTCOffsetNanoseconds.v  Sec11Thm.v
theories/Section12/: CalendarType.v  FormatCalendarAnnotation.v  ISODaysInMonth.v  Sec12Thm.v  ShowCalendar.v
theories/Section13/: DateEquations.v  EpochDaysToEpochMs.v  FormatFractionalSeconds.v  FormatTimeString.v  GetUnsignedRoundingMode.v  IsCalendarUnit.v  LargerOfTwoTemporalUnits.v  MaximumTemporalDurationRoundingIncrement.v  NegateRoundingMode.v  Precision.v  PrecisionPrime.v  RoundingMode.v  Sec13Thm.v  Sign.v  Style.v  TemporalUnit.v  TemporalUnitCategory.v  TemporalUnitEqb.v  ToSecondsStringPrecisionRecord.v  UnsignedRoundingMode.v  ValidateTemporalRoundingIncrement.v  ValidateTemporalUnitValue.v
theories/Section3/: CompareISODate.v  CreateISODateRecord.v  ISODateRecord.v  IsValidISODate.v  (+5 more)
(+40 files in other folders)
